feat: Correção no config